[gd_scene load_steps=17 format=3 uid="uid://cshmhtv0sc6d7"]

[ext_resource type="Script" path="res://MrocznaWioska/mroczna_wioska.gd" id="1_cq3ly"]
[ext_resource type="Texture2D" uid="uid://crd2k6v306thy" path="res://MrocznaWioska/bkg_37.png" id="2_jpm74"]
[ext_resource type="Texture2D" uid="uid://co2hb806o1lk1" path="res://MrocznaWioska/bmapaoc.png" id="3_8umme"]
[ext_resource type="Texture2D" uid="uid://ljjlr3yndnvo" path="res://MrocznaWioska/bmapaom_2.png" id="4_0d581"]
[ext_resource type="Texture2D" uid="uid://2n6rpx0cj1as" path="res://MrocznaWioska/bmapa0oc.png" id="5_o0qrh"]
[ext_resource type="Texture2D" uid="uid://dwxnnnkgceh8a" path="res://MrocznaWioska/bmapa0om_2.png" id="6_v84sg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tpmqo"]
texture = ExtResource("3_8umme")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_34lwv"]
texture = ExtResource("4_0d581")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cdx67"]
texture = ExtResource("4_0d581")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ao2dl"]
texture = ExtResource("3_8umme")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w43o2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8gck7"]
texture = ExtResource("5_o0qrh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fc6ef"]
texture = ExtResource("6_v84sg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jkhjc"]
texture = ExtResource("6_v84sg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3elgi"]
texture = ExtResource("5_o0qrh")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0yhes"]

[node name="MrocznaWioska" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cq3ly")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Wioska" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = -60.0
offset_right = 960.0
offset_bottom = 540.0
scale = Vector2(2, 2)
texture = ExtResource("2_jpm74")

[node name="Mapa" type="Button" parent="."]
layout_mode = 0
offset_left = 1466.0
offset_top = 86.0
offset_right = 1537.0
offset_bottom = 152.0
scale = Vector2(1.5, 1.5)
theme_override_styles/normal = SubResource("StyleBoxTexture_tpmqo")
theme_override_styles/hover = SubResource("StyleBoxTexture_34lwv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cdx67")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ao2dl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w43o2")

[node name="DarkMapa" type="Button" parent="."]
layout_mode = 0
offset_left = 1346.0
offset_top = 86.0
offset_right = 1417.0
offset_bottom = 152.0
scale = Vector2(1.5, 1.5)
theme_override_styles/normal = SubResource("StyleBoxTexture_8gck7")
theme_override_styles/hover = SubResource("StyleBoxTexture_fc6ef")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jkhjc")
theme_override_styles/disabled = SubResource("StyleBoxTexture_3elgi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0yhes")

[connection signal="pressed" from="Mapa" to="." method="_on_mapa_pressed"]
[connection signal="pressed" from="DarkMapa" to="." method="_on_dark_mapa_pressed"]
